actulizacion pagina assaweb2.0

--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
           </div><!-- End Info Item -->
 
         </div>
-
+<!--html>
         <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
           <div class="row gy-4">
 
@@ -1041,8 +1041,9 @@
             </div>
 
           </div>
-        </form><!-- End Contact Form -->
-
+        </form></html-->
+        <!-- End Contact Form -->
+        
       </div>
 
     </section><!-- /Contact Section -->
@@ -1091,8 +1092,8 @@
             <li><a href="https://assa.clickseguros.online/">Membresías Médicas</a></li>
           </ul>
         </div>
-
-        <div class="col-lg-4 col-md-12 footer-newsletter">
+<!--html>
+      <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Nuestro Boletín de Noticias</h4>
           <p>Suscribete a nuestro Boletín y enterare de lo último en nuestros servicios y promociones!</p>
           <form action="forms/newsletter.php" method="post" class="php-email-form">
@@ -1101,7 +1102,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Su solicitud a sido Enviada. Gracias!</div>
           </form>
-        </div>
+        </div></html-->
 
       </div>
     </div>
