--- a/vida.html
+++ b/vida.html
@@ -242,30 +242,18 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-12 footer-newsletter">
-            <h4>Nuestro Boletín de Noticias</h4>
-            <p>
-              Suscribete a nuestro Boletín y enterare de lo último en nuestros
-              servicios y promociones!
-            </p>
-            <form
-              action="forms/newsletter.php"
-              method="post"
-              class="php-email-form"
-            >
-              <div class="newsletter-form">
-                <input type="email" name="email" /><input
-                  type="submit"
-                  value="Suscribete"
-                />
-              </div>
-              <div class="loading">Cargando</div>
-              <div class="error-message"></div>
-              <div class="sent-message">
-                Su solicitud a sido Enviada. Gracias!
-              </div>
-            </form>
-          </div>
+          
+<!--html>
+      <div class="col-lg-4 col-md-12 footer-newsletter">
+          <h4>Nuestro Boletín de Noticias</h4>
+          <p>Suscribete a nuestro Boletín y enterare de lo último en nuestros servicios y promociones!</p>
+          <form action="forms/newsletter.php" method="post" class="php-email-form">
+            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Suscribete"></div>
+            <div class="loading">Cargando</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Su solicitud a sido Enviada. Gracias!</div>
+          </form>
+        </div></html-->
         </div>
       </div>
 
