--- a/blog-details.html
+++ b/blog-details.html
@@ -531,7 +531,9 @@
           </ul>
         </div>
 
-        <div class="col-lg-4 col-md-12 footer-newsletter">
+        
+<!--html>
+      <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Nuestro Boletín de Noticias</h4>
           <p>Suscribete a nuestro Boletín y enterare de lo último en nuestros servicios y promociones!</p>
           <form action="forms/newsletter.php" method="post" class="php-email-form">
@@ -540,7 +542,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Su solicitud a sido Enviada. Gracias!</div>
           </form>
-        </div>
+        </div></html-->
 
       </div>
     </div>
