--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
         <div class="row gy-4">
           <div class="container section-title" data-aos="fade-up">
-            <h2>Promociones</h2>
+            <h2>Socios Comerciales</h2>
             <p>Tabajamos con las principales aseguradoras, da click para conocer sus beneficios y promociones</p>
           </div><!-- End Section Title -->
           <div class="col-lg-6" data-aos="zoom-in" data-aos-delay="200">
@@ -808,7 +808,7 @@
 
           <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="pricing-item featured">
-              <h3>Autos | Cobertura Básica</h3>
+              <h3>Autos | Plan Básico RC</h3>
               <h4><sup>Desde $</sup>450 Mx<span>/ Mes</span></h4>
               <ul>
                 <li>Responsabilidad Civil Daños a terceros</li>
@@ -825,7 +825,7 @@
 
           <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="pricing-item featured">
-              <h3>Gastos Médicos | Indemnizatorios</h3>
+              <h3>GMM | Indemnizatorio</h3>
               <h4><sup>Desde $</sup>400 Mx<span> / Mes</span></h4>
               <ul>
                 <li>Seguro Indemnizatorio</li>
