--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
           <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="pricing-item featured">
               <h3>Autos | Plan Básico RC</h3>
-              <h4><sup>Desde $</sup>450 Mx<span>/ Mes</span></h4>
+              <h4><sup>Desde $</sup>450 Mx<span>/Mes</span></h4>
               <ul>
                 <li>Responsabilidad Civil Daños a terceros</li>
                 <li>Gastos Médicos al Conductor</li>
@@ -826,7 +826,7 @@
           <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="pricing-item featured">
               <h3>GMM | Indemnizatorio</h3>
-              <h4><sup>Desde $</sup>400 Mx<span> / Mes</span></h4>
+              <h4><sup>Desde $</sup>400 Mx<span>/Mes</span></h4>
               <ul>
                 <li>Seguro Indemnizatorio</li>
                 <li>Indemnización por Enfermedad</li>
@@ -843,7 +843,7 @@
           <div class="col-xl-3 col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="pricing-item featured">
               <h3>Vida |Temporal</h3>
-              <h4><sup>Desde$</sup>1,000<span> / Mes</span></h4>
+              <h4><sup>Desde$</sup>1,000 Mx<span>/Mes</span></h4>
               <ul>
                 <li>Tu eliges el plazo</li>
                 <li>Suma Asegurada acorde a tu actividad</li>
@@ -861,7 +861,7 @@
             <div class="pricing-item featured">
               <span class="advanced">Promo</span>
               <h3>Gastos Médicos| Mutuus</h3>
-              <h4><sup>desde$</sup>1,500<span> / Mes</span></h4>
+              <h4><sup>desde$</sup>1,500 Mx<span>/Mes</span></h4>
               <ul>
                 <li>Pago de cuenta Hospitalaria al 100%</li>
                 <li>Médico a domicilio</li>
