otra actualizacion para visualizar mejor index

--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
               <h3>Autos | Plan Básico RC</h3>
               <h4><sup>Desde $</sup>450 Mx<span>/Mes</span></h4>
               <ul>
-                <li>Responsabilidad Civil Daños a terceros</li>
+                <li>R.C. Daños a terceros</li>
                 <li>Gastos Médicos al Conductor</li>
                 <li>Asistencia Legal</li>
                 <li>Asistencia Vial</li>
@@ -846,7 +846,7 @@
               <h4><sup>Desde$</sup>1,000 Mx<span>/Mes</span></h4>
               <ul>
                 <li>Tu eliges el plazo</li>
-                <li>Suma Asegurada acorde a tu actividad</li>
+                <li>S.A. acorde a tu actividad</li>
                 <li>Apoyo gastos funerarios</li>
                 <li>Las Mejores aseguradoras</li>
                 <li>MSI con TDC Participantes</li>
@@ -863,7 +863,7 @@
               <h3>Gastos Médicos| Mutuus</h3>
               <h4><sup>desde$</sup>1,500 Mx<span>/Mes</span></h4>
               <ul>
-                <li>Pago de cuenta Hospitalaria al 100%</li>
+                <li>Pago 100% cuenta Hospital</li>
                 <li>Médico a domicilio</li>
                 <li>Check up básico anual</li>
                 <li>Descuentos en Medicamentos</li>
