actualizar de nuevo enlace a youtube

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
      <!--  https://www.youtube.com/watch?v=LXb3EKWsInQ -->
           <div class="col-lg-5 position-relative align-self-start" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="https://youtube.com/shorts/5PedVqNqGkU?feature=share" class="glightbox play-btn"></a>
+            <a href="https://www.youtube.com/watch?v=kAMU8Qgk6OY" class="glightbox play-btn"></a>
           </div>
 
           <div class="col-lg-7 content" data-aos="fade-up" data-aos-delay="100">
